[package]
name = "gltf-mayhem-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
gltf-json = { path = "../../gltf-json", features = ["names"] }

[[bin]]
name = "gltf_parse"
path = "fuzz_targets/gltf_parse.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
